Revise MongoDB commands and update API references
Updated MongoDB commands and API endpoints in documentation. Removed outdated security recommendations and added sample user credentials.